vemos frame motion

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,13 @@
 .miclase{
   background-color: aquamarine;
 }
+
+/*.pizza-svg{
+  width: 80px;
+  overflow: visible;
+  stroke: green;
+  stroke-width: 4;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+}
+*/
